<resources>
    <string name="app_name">Plower</string>

    <string name="compass_dial" translatable="false">Compass Dial</string>
    <string name="compass_hands" translatable="false">Compass Hands</string>

    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>

    <string name="format_info_window_on_marker">쓰레기통 정보: %s</string>
    <string name="format_info_window_on_map">좌표: (%1$.5f, %2$.5f)</string>

    <string name="dash">-</string>
    <string name="viewGithub">View on GitHub</string>
    <string name="actionToggleValues">Toggle Values</string>
    <string name="actionToggleIcons">Toggle Icons</string>
    <string name="actionToggleFilled">Toggle Filled</string>
    <string name="actionToggleCircles">Toggle Circles</string>
    <string name="actionToggleCubic">Toggle Cubic</string>
    <string name="actionToggleStepped">Toggle Stepped</string>
    <string name="actionToggleHorizontalCubic">Toggle Horizontal Cubic</string>
    <string name="actionTogglePinch">Toggle PinchZoom</string>
    <string name="actionToggleAutoScale">Toggle Auto Scale</string>
    <string name="actionToggleHighlight">Toggle Highlight</string>
    <string name="animateX">Animate X</string>
    <string name="animateY">Animate Y</string>
    <string name="animateXY">Animate XY</string>
    <string name="actionSave">Save to Gallery</string>

    <string name="near_bin_notice">1km 근방 쓰레기통 : %d</string>

    <!-- Create by Lee Oh Hyoung on 2019.10.12 -->
    <string name="fragment_home_nearest_bin_description_sub_title">Nearest Trash Can</string>
    <string name="fragment_home_nearest_bin_description_example">PNU Station front 1</string>
    <string name="fragment_home_nearest_bin_distance_from_here">From here,</string>
    <string name="fragment_home_nearest_bin_distance_example">560m</string>
    <string name="fragment_home_nearest_bin_distance_format_kilo_meter">%dkm</string>
    <string name="fragment_home_nearest_bin_distance_format_meter">%dm</string>
    <string name="fragment_home_your_steps_sub_title">Your Steps</string>
    <string name="fragment_home_nearest_trash_can_sub_title">Nearest Trash Can</string>

    <string name="fragment_album_title">갤러리</string>

    <string name="fragment_maps_title">쓰레기통 위치</string>
    <string name="fragment_maps_linear_layout_inform_time">시간</string>
    <string name="fragment_maps_linear_layout_inform_distance">이동 거리</string>
    <string name="fragment_maps_linear_layout_inform_kcal">칼로리</string>
    <string name="fragment_maps_linear_layout_inform_time_example">00:00</string>
    <string name="fragment_maps_linear_layout_inform_distance_example">0.0 m</string>
    <string name="fragment_maps_linear_layout_inform_kcal_example">0 kcal</string>


</resources>
