<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp">

    <LinearLayout
        android:id="@+id/fragment_album_linear_layout_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/color_text_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/fragment_maps_title"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/noto_light"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_album_relative_layout_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_album_linear_layout_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/fragment_maps_frame_layout_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_near_bin_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_near_bin_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/near_bin_notice"
                android:textSize="12sp"
                android:textColor="#ffffff"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="2.6dp"
                android:layout_marginTop="2.6dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginRight="10dp"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/fragment_maps_linear_layout_inform"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:weightSum="3"
            android:visibility="gone"
            android:background="@drawable/v2_background_radius_20dp_rounded_white"
            android:baselineAligned="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_time"
                    android:textColor="@color/v1_color_title_gps"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_fragment_four_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_time_example"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_distance"
                    android:textColor="@color/v1_color_title_gps"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_fragment_four_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_distance_example"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_kcal"
                    android:textColor="@color/v1_color_title_gps"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_fragment_four_calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:lineSpacingExtra="9sp"
                    android:text="@string/fragment_maps_linear_layout_inform_kcal_example"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/fragment_maps_image_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/start_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/fragment_maps_linear_layout_running_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageButton
                android:id="@+id/fragment_maps_image_button_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/pause_button" />

            <ImageButton
                android:id="@+id/fragment_maps_image_button_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="100dp"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/stop_button" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>